src/test/resources/public/input/typechecking/fail/incorrect_operand/fail09.jova
class Helper {
    public int a;
    private int b;

    public int getB() {
        return b;
    }
}

class B {
    public Helper getHelper(){
        Helper a;
        a = new Helper;
        return a;
    }

    public int asdfd(int a, bool b) {
        return 0;
    }
}

class A {

  private int get3() {
    return 3;
  }

  public int func() {
    int foo;
    int foo2;
    Helper helper;
    B b;
    bool c;
    bool d;

    foo = 3;
    foo2 = 3;
    b = new B;
    c = true;
    d = true;

    foo = ( (foo + (foo) / (foo >= foo2) / 16 + b );
    return foo;
  }
}
